# SolarSystem-openGL

./: CMakeLists.txt  README.md
include/glad/: glad.h
shaders/: bloom_final.frag  blur.frag  blur.vert  quad.frag  scene.frag  scene.vert
src/: glad.c  main.cpp
src/core/: camera.cpp  camera.h  shader.cpp  shader.h
src/rendering/: sphere.cpp  sphere.h
src/utils/: texture.cpp  texture.h
